# brisk

./: .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  acquire-deps.cmake  dep-hash.cmake  format-all.sh  upload-deps.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: docs.yml  test.yml
cmake/: Package-README.md.in  add_autotests.cmake  add_license.cmake  brisk.cmake  config.cmake.in  dep-hash.cmake  get_triplet.cmake  init.cmake  installD3DWARP.cmake  macos-merge-binaries.cmake
cmake/scripts/: compile_resources.cmake  metadata.cmake  pack_resource.cmake  setup_executable.cmake
cmake/toolchains/: linux.cmake  osx.cmake  windows.cmake
cmake/triplets/: arm64-linux.cmake  arm64-windows-static-md.cmake  arm64-windows-static.cmake  uni-osx.cmake  x64-windows-static-md.cmake  x64-windows-static.cmake  x86-windows-static-md.cmake  x86-windows-static.cmake
docs/: cxxdox.yml  mkdocs.yml
docs/custom/: style.css
docs/docs/: about.md  binding.md  getting_started.md  hello_world.md  index.md  other_examples.md  prerequisites.md  resources.md
examples/: CMakeLists.txt  README.md
examples/calc/: CMakeLists.txt  calc.cpp  math.hpp
examples/counter/: CMakeLists.txt  main.cpp
examples/crud/: CMakeLists.txt  main.cpp
examples/dashboard/: CMakeLists.txt
examples/dashboard/src/: CMakeLists.txt  MainComponent.hpp  Model.cpp  Model.hpp  SettingsComponent.cpp  Style.hpp  View.cpp  View.hpp  ViewModel.cpp  ViewModel.hpp  dashboard.cpp
examples/dashboard/src/View/: AboutComponent.cpp  AboutComponent.hpp  MainComponent.cpp  MainComponent.hpp  SettingsComponent.hpp  Style.hpp  View.cpp  View.hpp
examples/dashboard/src/ViewModel/: ViewModel.hpp
examples/flight_booker/: CMakeLists.txt  main.cpp
examples/own-window/: CMakeLists.txt  WindowGlfw.cpp  WindowGlfw.hpp  own-window.cpp
examples/own-window-gui/: CMakeLists.txt  own-window-gui.cpp
examples/showcase/: CMakeLists.txt
examples/splash-screen/: CMakeLists.txt  splash-screen.cpp
examples/temperature_converter/: CMakeLists.txt  main.cpp
examples/timer/: CMakeLists.txt  main.cpp
examples/webgpu-demo/: CMakeLists.txt  webgpu-demo.cpp
resources/shaders/: webgpu.wgsl
src/: CMakeLists.txt
src/core/: App.cpp  AutoTestsMain.cpp  AutoreleasePool.mm  Binding.cpp  Binding_test.cpp  Bytes.cpp  Bytes_test.cpp  CMakeLists.txt  COMInit.cpp  Catch2Utils.hpp  Compression.cpp  Compression_Brotli.cpp  Compression_GZip.cpp  Compression_LZ4.cpp  Compression_test.cpp  Cryptography.cpp  Cryptography_Linux.cpp  Cryptography_Windows.cpp  Cryptography_test.cpp  Deps.cmake  DynamicLibrary_Darwin.mm  DynamicLibrary_Linux.cpp  DynamicLibrary_Windows.cpp  DynamicLibrary_test.cpp  Encoding.cpp  Encoding_test.cpp  Fixed_test.cpp  Hash.cpp  Hash_test.cpp  IO.cpp  IO_Darwin.mm  IO_Linux.cpp  IO_Windows.cpp  IO_test.cpp  Initialization.cpp  InlineVector_test.cpp  Io.cpp  Io_Darwin.mm  Io_Linux.cpp  Io_Windows.cpp  (+31 more)
src/graphics/: AdapterForMonitor.hpp  Atlas.cpp  Atlas.hpp  CMakeLists.txt  Canvas.cpp  Catch2Utils.hpp  ColorSpace.cpp  ColorSpace_test.cpp  Color_test.cpp  Deps.cmake  FlatAllocator.hpp  FlatAllocator_test.cpp  Fonts.cpp  Fonts_test.cpp  Geometry_test.cpp  Gradients.cpp  Html.cpp  HtmlParser.cpp  HtmlParser_test.cpp  Html_test.cpp  I18n.cpp  I18n_fallback.cpp  ICU.cpp  Image.cpp  ImageFormats.cpp  ImageFormats_bmp.cpp  ImageFormats_jpeg.cpp  ImageFormats_png.cpp  ImageFormats_test.cpp  ImageFormats_webp.cpp  ImageTransform.cpp  Image_test.cpp  Mask.cpp  Mask.hpp  Matrix_test.cpp  Offscreen.cpp  OpenType.cpp  Path.cpp  Pixel_test.cpp  Raster_test.cpp  (+12 more)
src/graphics/D3D11Renderer/: CMakeLists.txt  Common.cpp  Common.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderEncoder.cpp  RenderEncoder.hpp  Renderer.cpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  fragment.hlsl  vertex.hlsl
src/graphics/D3d11Renderer/: CMakeLists.txt  Common.cpp  Common.hpp  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderEncoder.cpp  RenderEncoder.hpp  Renderer.cpp  Renderer.hpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  fragment.hlsl  vertex.hlsl
src/graphics/WebGPURenderer/: CMakeLists.txt  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderEncoder.cpp  RenderEncoder.hpp  Renderer.hpp  WebGPU.cpp  WebGPURenderer.cpp  WebGPURenderer.hpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  WindowRenderTarget_Darwin.mm  WindowRenderTarget_Linux.cpp  WindowRenderTarget_Windows.cpp
src/graphics/WebGpuRenderer/: CMakeLists.txt  ImageBackend.cpp  ImageBackend.hpp  ImageRenderTarget.cpp  ImageRenderTarget.hpp  RenderDevice.cpp  RenderDevice.hpp  RenderDevice_Darwin.mm  RenderDevice_Linux.cpp  RenderDevice_Windows.cpp  RenderEncoder.cpp  RenderEncoder.hpp  Renderer.cpp  Renderer.hpp  WebGpu.cpp  WindowRenderTarget.cpp  WindowRenderTarget.hpp  WindowRenderTarget_Darwin.mm  WindowRenderTarget_Linux.cpp  WindowRenderTarget_Windows.cpp
src/graphics/blaze/: BitOps.h  Blaze.cpp  Blaze.h  BumpAllocator.cpp  BumpAllocator.h  CompositionOps.h  CurveUtils.cpp  CurveUtils.h  Geometry.h  ImageData.h  LineArrayTiled.h  LineArrayTiledInlines.h  LineArrayX16Y16.h  LineArrayX16Y16Inlines.h  LineArrayX32Y16.h  LineArrayX32Y16Inlines.h  LineBlockAllocator.cpp  LineBlockAllocator.h  Linearizer.h  LinearizerUtils.h  Linearizer_p.h  Mask.cpp  Mask.h  Matrix.cpp  Matrix.h  Rasterizer.h  Rasterizer_p.h  RowItemList.h  SIMD.h  ThreadMemory.h  Threads.cpp  Threads.h  TileDescriptor_16x8.h  TileDescriptor_64x16.h  TileDescriptor_8x16.h  TileDescriptor_8x32.h  TileDescriptor_8x8.h  Utils.h
src/graphics/vector/: Bezier.cpp  Bezier.hpp  Common.hpp  Dasher.cpp  Dasher.hpp  Line.hpp  Raster.cpp  Raster.hpp  Rle.cpp  Rle.hpp  vpath.cpp  vpath.h
src/graphics/vector/freetype/: v_ft_raster.cpp  v_ft_raster.h
src/gui/: Animation.cpp  CMakeLists.txt  Event.cpp  (+16 more)
(+360 files in other folders)
